--- a/config/polybar/config
+++ b/config/polybar/config
@@ -55,7 +55,7 @@ font-1 = Hack Nerd Font:pixelsize=9;1
 
 modules-left = title
 modules-center = bspwm
-modules-right = xkeyboard alsa wlan eth battery date powermenu
+modules-right = xkeyboard pulseaudio wlan eth battery date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -105,7 +105,7 @@ font-1 = Hack Nerd Font:pixelsize=9;1
 
 modules-left = title
 modules-center = bspwm
-modules-right = xkeyboard alsa wlan eth battery date powermenu
+modules-right = xkeyboard pulseaudio wlan eth battery date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -271,7 +271,7 @@ date-alt = " %d-%m-%Y"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 
 label = %date% %time%
@@ -304,6 +304,33 @@ bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
+[module/pulseaudio]
+type = internal/pulseaudio
+
+format-volume = <label-volume> <bar-volume>
+label-volume = 墳 %percentage%%
+label-volume-foreground = ${root.foreground}
+
+label-muted = 婢 muted
+label-muted-foreground = ${colors.foreground-alt}
+
+bar-volume-width = 10
+bar-volume-foreground-0 = #93C6C1
+bar-volume-foreground-1 = #93C6C1
+bar-volume-foreground-2 = #93C6C1
+bar-volume-foreground-3 = #93C6C1
+bar-volume-foreground-4 = #93C6C1
+bar-volume-foreground-5 = #e7b22d
+bar-volume-foreground-6 = #882F11
+bar-volume-gradient = false
+bar-volume-indicator = |
+bar-volume-indicator-font = 2
+bar-volume-fill = ─
+bar-volume-fill-font = 2
+bar-volume-empty = ─
+bar-volume-empty-font = 2
+bar-volume-empty-foreground = ${colors.foreground-alt}
+
 [module/battery]
 type = internal/battery
 battery = BAT1
@@ -314,7 +341,6 @@ format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
 
 format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
@@ -377,10 +403,10 @@ menu-0-1-exec = menu-open-2
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-1-exec = reboot
 
 menu-2-0 = power off
-menu-2-0-exec = sudo poweroff
+menu-2-0-exec = poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
